service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:    
    app: httpserver  
  name: httpserver
spec:  
  progressDeadlineSeconds: 600  
  replicas: 2  
  revisionHistoryLimit: 10  
  selector:    
    matchLabels:      
      app: httpserver  
  strategy:    
    rollingUpdate:      
      maxSurge: 25%      
      maxUnavailable: 25%    
    type: RollingUpdate  
  template:    
    metadata:      
      creationTimestamp: null      
      labels:        
        app: httpserver    
      spec:      
        containers:        
          - env:            
            - name: httpport              
              valueFrom:                
              configMapKeyRef:                  
                key: httpport                  
                name: httpport          
            image: docker.io/httpserver:1.1          
            imagePullPolicy: IfNotPresent          
            name: httpserver          
            resources:            
              limits:              
                cpu: 100m              
                memory: 100Mi            
              requests:              
                cpu: 50m              
                memory: 50Mi          
            livenessProbe:            
              failureThreshold: 3            
              httpGet:              
                path: /healthz              
                port: 8080              
                scheme: HTTP            
              initialDelaySeconds: 5            
              periodSeconds: 10            
              successThreshold: 1            
              timeoutSeconds: 1          
            readinessProbe:            
              failureThreshold: 3            
              httpGet:              
                path: /healthz              
                port: 8080              
                scheme: HTTP            
              initialDelaySeconds: 5            
              periodSeconds: 10            
              successThreshold: 1            
              timeoutSeconds: 1          
              terminationMessagePath: ~/http-server-log 
              terminationMessagePolicy: File      
          dnsPolicy: ClusterFirst      
          imagePullSecrets:        
          - name: http-server      
          restartPolicy: Always      
          schedulerName: default-scheduler      
          securityContext: {}      
          terminationGracePeriodSeconds: 30
