ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  annotations:    
    cert-manager.io/issuer: letsencrypt-prod  
  name: http-server
spec:  
ingressClassName: 
  nginx  rules:    
  	- host: k8s-manager.cloud.com      
  	  http:        
  	    paths:          
  	      - backend:   
  	        service:                
  	          name: http-server                
  	          port:                  
  	            number: 80            
  	      path: /            
  	      pathType: Prefix  
tls:    
  - hosts:        
    - k8s-manager.cloud.com      
    secretName: tls-k8s
